DONE ( - Custom calendar view with grey date, highlight date on selected - Month title also change with scroll - Custom Nav Bar Bottom )

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -15,15 +15,137 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--        android:id="@+id/bottomNavigationView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:menu="@menu/bottom_nav"-->
+<!--        android:background="@drawable/bottom_drawer_background"/>-->
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
+    <LinearLayout
+        android:background="@drawable/bottom_drawer_background"
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav"
-        android:background="@drawable/bottom_drawer_background"/>
+        android:orientation="horizontal"
+        android:weightSum="4"
+        android:paddingVertical="25dp"
+        android:paddingHorizontal="30dp"
+        android:gravity="center">
+        <LinearLayout
+            android:id="@+id/home_nav_layout"
+            android:background="@drawable/background_selected"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/home_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_home_nav"/>
+            <TextView
+                android:id="@+id/home_txt"
+                android:layout_marginStart="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular"
+                android:includeFontPadding="false"
+                android:textSize="21sp"
+                android:text="Home"
+                android:textColor="@color/purple_light"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/schedule_nav_layout"
+            android:background="@color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/schedule_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_cal_off"/>
+            <TextView
+                android:id="@+id/schedule_txt"
+                android:visibility="gone"
+                android:layout_marginStart="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular"
+                android:includeFontPadding="false"
+                android:textSize="21sp"
+                android:text="Schedule"
+                android:textColor="@color/purple_light"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/history_nav_layout"
+            android:background="@color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/history_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_clock_off"/>
+            <TextView
+                android:id="@+id/history_txt"
+                android:visibility="gone"
+                android:layout_marginStart="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular"
+                android:includeFontPadding="false"
+                android:textSize="21sp"
+                android:text="History"
+                android:textColor="@color/purple_light"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/profile_nav_layout"
+            android:background="@color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/profile_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_profile_off"/>
+            <TextView
+                android:id="@+id/profile_txt"
+                android:visibility="gone"
+                android:layout_marginStart="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular"
+                android:includeFontPadding="false"
+                android:textSize="21sp"
+                android:text="Profile"
+                android:textColor="@color/purple_light"
+                />
+        </LinearLayout>
 
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
